# beam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
Include/Beam/: Http.h
Source/: Http.c
frontend/: 404.html  badrequest.html  index.html
frontend/components/: base.html  code.html  footer.html
frontend/css/: main.css
include/beam/: file.h  html.h  http.h  log.h
include/beam/container/: common.h  list.h  string.h  tree.h  vec.h
source/: CMakeLists.txt  file.c  html.c  http.c  log.c  main.c
source/aoc/: CMakeLists.txt  day1.c
source/container/: list.c  string.c  tree.c  vec.c
source/frontend/: base.c  frontend.h
